Changes in version 1.0
  o Fixed badge rendering for a certain combination of Chrome and
    AdBlock Plus. Patch by Arlo Breault. Fixes bug 8300.

Changes in version 0.12
  o The new flashproxy-reg-url program prints a URL which, when
    requested, causes an address to be registered with the facilitator.
    You can use this program if the other registration methods are
    blocked: pass the URL to a third party and ask them to request it.
    Patch by Alexandre Allaire. Fixes bug 7559.

  o The new websocket-server program is the server transport plugin that
    flash proxies talk to. It replaces the third-party websockify
    program that was used formerly. It works as a managed proxy and
    supports the extended ORPort protocol. Fixes bug 7620.

  o Added a line of JavaScript that you can use to put a proxy badge on
    MediaWiki sites that allow custom JavaScript. Follow the
    instructions in modules/mediawiki/custom.js. Contributed by
    Sathyanarayanan Gunasekaran.

  o Make flashproxy-client ignore errors in opening listeners, as long
    as at least one local and one remote listener can be opened. A user
    reported a problem with listening on IPv6, while being able to
    listen on IPv4. Fixes bug 8319.

  o The facilitator now returns a check-back-in parameter in its
    response, telling proxies how often to poll. Fixes bug 8171. Patch
    by Alexandre Allaire.

  o Updated the Tor Browser check to match the behavior of new Tor
    Browsers. Patch by Alexandre Allaire and Arlo Breault. Fixes bug
    8434.

Changes in version 0.11
  o Added -4 and -6 options to flashproxy-client and
    flashproxy-reg-http. (The options already existed in
    flashproxy-reg-email.) These options cause registrations helpers to
    use IPv4 or IPv6 only. Fixes bug 7622. Patch by Jorge Couchet.

  o The facilitator now gives only IPv4 clients to proxies requesting
    over IPv4, and IPv6 clients to proxies requesting over IPv6. This is