@@ -2,6 +2,8 @@ Changes in version 1.0
   o Fixed badge rendering for a certain combination of Chrome and
     AdBlock Plus. Patch by Arlo Breault. Fixes bug 8300.
 
+  o There is now a 10-second HTTP request timeout in websocket-server.
+
 Changes in version 0.12
   o The new flashproxy-reg-url program prints a URL which, when
     requested, causes an address to be registered with the facilitator.
